cambios antes de subir al servidor

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base-fullscreen.html' %}
 
-{% block title %} Auth Sign IN {% endblock title %}
+{% block title %} Autenticación {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -14,15 +14,15 @@
   </nav>
 
   <main class="main-content  mt-0">
-    <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('/static/assets/img/curved-images/curved9.jpg');">
+    <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('/static/assets/img/curved-images/curved15.jpg');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Gestion Preventiva </h1>
-            <p class="text-lead text-white">
-              Sistema de gestión de riesgos. 
-            </p>
+          <div class="col-lg-12 text-center mx-auto">
+            <h1 class="text-white mb-2 mt-5"><img class="h-15" src="/static/assets/img/logos/alertado-transparente.png" alt="logo-emergencia"> </h1>
+            <!--p class="text-lead text-white">
+              Sistema de gestión de riesgos
+            </p-->
           </div>
         </div>
       </div>
