--- a/apps/templates/includes/footer-auth.html
+++ b/apps/templates/includes/footer-auth.html
@@ -1,10 +1,10 @@
 <footer class="footer py-5">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mb-4 mx-auto text-center fadeIn1 fadeInBottom">
+      <!--div class="col-lg-8 mb-4 mx-auto text-center fadeIn1 fadeInBottom">
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-          Sobre SINI
+          Sobre AlertaDo
         </a>
         <a href="#" 
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
@@ -22,12 +22,17 @@
            target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
           Blog
         </a>          
-      </div>
+      </div-->
       <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
         <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-emergencias.png" alt="logo-emergencia">
-
         <img class="w-30 fadeIn1 fadeInBottom" src="/static/assets/img/logo-sini.png" alt="logo-sini">
         <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-defensa-civil.png" alt="logo-defensa-civil">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logos/progeri-do.jpg" alt="logo-progeri">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logos/unioneuropea.jpg" alt="logo-union-europea">
+        <!--img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logos/alertado-icon.jpg" alt="logo-emergencia"-->
+     
+
+
         
         
         <!--a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
