--- a/sini/templates/sini/api_user/acc_active_email.html
+++ b/sini/templates/sini/api_user/acc_active_email.html
@@ -1,7 +1,6 @@
 {% autoescape off %}  
-<strong>Hola!</strong> <br> 
-Saludos cordiales de parte de SINI<br>
-Este es un correo electrónico de confirmación de cuenta por parte de la aplicación SINI.<br>
+<strong>Saludos cordiales de parte de AlertaDo</strong> <br> 
+Este es un correo electrónico de confirmación de cuenta por parte de la aplicación AlertaDo.<br>
 Estos son los datos para acceder a la aplicación móvil:<br>
 Email: {{email}}<br>
 Contraseña: {{password_random}}<br><br>
