--- a/sini/templates/sini/api_user/api_user_detail.html
+++ b/sini/templates/sini/api_user/api_user_detail.html
@@ -172,7 +172,7 @@
             <div class="form-group">
               <label class="control-label" for="newpassword">Nueva contraseña</label>
               <input type="password" id="newpassword" name="newpassword" class="form-control" required></input>
-              <input id="checkShow" type="checkbox" class="mt-4" onclick="showpasswordFunction()">&nbsp;<b>Mostrar contraseña</b>
+              <input id="checkShow" type="checkbox" class="mt-4" onclick="showpasswordFunction()"><label class="control-label" for="checkShow"><b>Mostrar contraseña</b></label>
             </div>
     
         </div>
