--- a/sini/templates/sini/api_user/new_password_email.html
+++ b/sini/templates/sini/api_user/new_password_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}  
-<strong>Saludos cordiales de parte de SINI</strong> <br> 
+<strong>Saludos cordiales de parte de AlertaDo</strong> <br> 
 El administrador del sistema ha cambiado su contraseña<br>
 Estas son las nuevas credenciales para acceder a la aplicación móvil:<br>
 <b>Email:</b> {{email}}<br>
