--- a/sini/templates/sini/incidence/incidence_managment.html
+++ b/sini/templates/sini/incidence/incidence_managment.html
@@ -262,7 +262,7 @@
                 <button type="button"
                         class="btn bg-success text-white"
                         data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn bg-danger text-white" id="crearIncidencia">Aceptar</button>
+                <button type="button" class="btn bg-secondary text-white" id="crearIncidencia">Aceptar</button>
               </div>
             </div>
           </div>
@@ -296,7 +296,7 @@
                 <button type="button"
                         class="btn bg-success text-white"
                         data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn bg-danger text-white" id="asignarIncidencia">Aceptar</button>
+                <button type="button" class="btn bg-secondary text-white" id="asignarIncidencia">Aceptar</button>
               </div>
             </div>
           </div>
