--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -3,8 +3,8 @@
   <div class="sidenav-header">
     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="/">
-      <img src="/static/assets/img/sini-icon.png" class="navbar-brand-img h-100" alt="main_logo">
-      <span class="ms-1 font-weight-bold">Gestion Preventiva</span>
+      <img src="/static/assets/img/logos/alertado-banner.jpg" class="navbar-brand-img h-100" alt="main_logo">
+      <!--span class="ms-1 font-weight-bold">Gestion Preventiva</span-->
     </a>
   </div>
   <hr class="horizontal dark mt-0">
@@ -32,7 +32,7 @@
               </g>
             </svg>
           </div>
-          <span class="nav-link-text ms-1">SINI</span>
+          <span class="nav-link-text ms-1">Gestión</span>
         </a>
         <div class="collapse {% if active_menu == 'sini' %} show {% endif %}" id="siniMain">
             <ul class="nav ms-4 ps-3">
@@ -455,7 +455,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">APP móvil</span>
+            <span class="nav-link-text ms-1">App móvil</span>
           </a>
             <div class="collapse {% if active_menu == 'appmobile' %} show {% endif %}" id="movilMenu">
             <ul class="nav ms-4 ps-3">
