--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -18,7 +18,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="/static/assets/img/logo-s.png">
+  <link rel="icon" type="image/png" href="/static/assets/img/logos/alertado.jpg">
 
   <meta http-equiv="Expires" content="0">
   <meta http-equiv="Last-Modified" content="0">
@@ -26,7 +26,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   
   <title>
-    SINI - {% block title %}{% endblock %}
+    AlertaDo - {% block title %}{% endblock %}
   </title>
 
   <!--     Fonts and icons     -->
