--- a/apps/templates/home/dashboards-vr-default.html
+++ b/apps/templates/home/dashboards-vr-default.html
@@ -1282,7 +1282,7 @@
 <!-- Specific JS goes HERE --> 
 {% block javascripts %}
 
-  <script src="/static/assets/js/plugins/threejs.js"></script>
+  <!-- <script src="/static/assets/js/plugins/threejs.js"></script> -->
   <script src="/static/assets/js/plugins/orbit-controls.js"></script>
   <script src="/static/assets/js/plugins/chartjs.min.js"></script>
   <script>
