--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -404,7 +404,7 @@
 {% block javascripts %} 
 
   <script src="/static/assets/js/plugins/chartjs.min.js"></script>
-  <script src="/static/assets/js/plugins/threejs.js"></script>
+  <!-- <script src="/static/assets/js/plugins/threejs.js"></script> -->
   <script src="/static/assets/js/plugins/orbit-controls.js"></script>
   <script>
     var ctx = document.getElementById("chart-bars").getContext("2d");
