--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -206,7 +206,8 @@
 <!-- Specific JS goes HERE --> 
 {% block javascripts %} 
 
-<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
