--- a/sini/templates/sini/incidence/incidence_managment.html
+++ b/sini/templates/sini/incidence/incidence_managment.html
@@ -621,7 +621,8 @@
 {% endblock content %}
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <script type="text/javascript"
           charset="utf8"
           src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
