--- a/sini/templates/sini/warning/warning_list.html
+++ b/sini/templates/sini/warning/warning_list.html
@@ -373,7 +373,8 @@
 {% endblock content %}
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <script>
 
 
