Arreglos antes de la integracion

--- a/sini/templates/sini/notification/notification_form.html
+++ b/sini/templates/sini/notification/notification_form.html
@@ -123,7 +123,7 @@
           <div class="row mb-2">
             <div class="col-6">
               <div class="form-group">
-                <h6>{{ form.url_noticia.label }} {% if form.url_noticia.subject.required %}<span>*</span>{% endif %}</h6>
+                <h6>{{ form.url_noticia.label }} {% if form.url_noticia.field.required %}<span>*</span>{% endif %}</h6>
                 {{ form.url_noticia }}
               </div>
             </div>
